Writing Introduction chapter

--- a/Report/Main/ReportSIM_Samuele_Simone.tex
+++ b/Report/Main/ReportSIM_Samuele_Simone.tex
@@ -106,7 +106,7 @@
 
 \bibliographystyle{unsrt}
 \bibliography{bibliografia}
-\addcontentsline{toc}{chapter}{Bibliografia}
+\addcontentsline{toc}{chapter}{References}
 
 
 \end{document}
