--- a/Report/Main/bibliografia.bib
+++ b/Report/Main/bibliografia.bib
@@ -33,6 +33,12 @@
     publisher={Penguin},
     year={2007}
 }
+@misc{decodeagency,
+author = {Decode Agency},
+title = {What is an App Mockup?},
+year = {2022},
+howpublished = {\url{https://decode.agency/article/app-mockup/#:~:text=with%20proper%20wireframing-,What%20is%20an%20app%20mockup%3F,dummy%20text%20is%20also%20acceptable.}},
+}
 
 @misc{lim2019web,
 	title = {{LIM} official website},
