--- a/Report/Main/bibliografia.bib
+++ b/Report/Main/bibliografia.bib
@@ -1,38 +1,3 @@
-@article{haus2005multi,
-	title={A multi-layered, time-based music description approach based on XML},
-	author={Haus, Goffredo and Longari, Maurizio},
-	journal={Computer Music Journal},
-	volume={29},
-	number={1},
-	pages={70--85},
-	year={2005},
-	publisher={MIT Press}
-}
-
-@BOOK{lazar2017methods,
-  title = {Research methods in {Human-Computer Interaction}},
-  author = {Jonathan Lazar and Jijuan Heidi Feng and Harry Hochheiser},
-  publisher = {Morgan Kaufmann},
-  year = {2017},
-  edition = {Second},
-  address = {Cambridge}
-}
-
-@BOOK{mittelbach2004latex,
-  title = {The LaTeX Companion},
-  author = {Frank Mittelbach and Michel Goossens and Johannes Braams and David Carlisle and Chris Rowley},
-  publisher = {Addison-Wesley},
-  year = {2004},
-  edition = {Second},
-  address = {Boston}
-}
-
-@book{strunk1999style,
-    author={William Strunk},
-    title={Elements of Style},
-    publisher={Penguin},
-    year={2007}
-}
 @misc{decodeagency,
 author = {Decode Agency},
 title = {What is an App Mockup?},
@@ -40,16 +5,12 @@ year = {2022},
 howpublished = {\url{https://decode.agency/article/app-mockup/#:~:text=with%20proper%20wireframing-,What%20is%20an%20app%20mockup%3F,dummy%20text%20is%20also%20acceptable.}},
 }
 
-@misc{lim2019web,
-	title = {{LIM} official website},
-	howpublished = {\url{https://www.lim.di.unimi.it}},
-	note = {Accessed: 2019-04-10}
+@misc{columbia,
+author = {Columbia University},
+title = {Agent-Based Modeling},
+year = {2023},
+howpublished = {\url{https://www.publichealth.columbia.edu/research/population-health-methods/agent-based-modeling#:~:text=Agent%2Dbased%20models%20are%20computer,epidemiology)%20are%20assigned%20certain%20attributes.}},
 }
 
-@misc{hamalainen2019web,
-    author = {W. H\"am\"al\"ainen},
-	title = {Scientific Writing for Computer Science Students},
-	howpublished = {\url{http://www.cs.joensuu.fi/\~whamalai/teaching.html}},
-	note = {Accessed: 2019-04-10}
-}
+
 
